--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,10 +5,6 @@ html {
   font-family: Helvetica;
 }
 
-footer {
-  background-color: azure;
-}
-
 nav {
   margin: 1rem 2rem 1rem 0;
   display: flex;
@@ -42,6 +38,7 @@ h1 {
   height: 31rem;
   background-image: url("../images/glasses-bg.png");
   background-size: cover;
+  overflow: hidden;
 }
 
 .overhead {
@@ -49,6 +46,7 @@ h1 {
   justify-content: space-between;
   background-color: cadetblue;
   color: white;
+  margin: 1rem auto;
 }
 
 .company-id {
@@ -57,14 +55,20 @@ h1 {
   align-items: center;
 }
 
-.company-id img {
+.company-id-image {
   height: 1.5rem;
   margin-right: 1rem;
+}
+
+.card-container {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .motto-card {
   background-color: white;
   margin-top: 10rem;
+  margin-right: -2rem;
 }
 
 .selling-point-grid {
@@ -80,6 +84,7 @@ h1 {
   width: 5rem;
   margin: 0 3rem;
   align-items: center;
+  justify-content: space-between;
 }
 
 .selling-point-image-container {
@@ -89,20 +94,27 @@ h1 {
 
 .selling-point img {
   height: auto;
-  max-height: 100%;
+  max-height: 80%;
   max-width: 100%;
   display: block;
+}
+
+.selling-point p {
+  text-align: center;
+  line-height: 1.4;
 }
 
 .quick-hits-grid {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  margin-bottom: 5rem;
 }
 
 .quick-hit {
   width: 35%;
   margin-right: 5%;
-
+  line-height: 1.4;
 }
 
 .quick-hit-title {
@@ -117,4 +129,12 @@ h1 {
   padding: 0.5rem 0 0.5rem 1.25rem;
   color: white;
   background-color: cadetblue;
+}
+
+.footer-items {
+  overflow: hidden;
+  background-color: azure;
+  display: flex;
+  align-items: center;
+  padding: 4rem 0 4rem 4rem;
 }
