--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -138,3 +138,27 @@ h1 {
   align-items: center;
   padding: 4rem 0 4rem 4rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  h1 {
+    font-size: 1.33rem;
+    padding: 1.5rem 5rem;
+  }
+
+  .site-container {
+    width: 100%;
+  }
+
+  .banner {
+    height: 22rem;
+  }
+
+  .overhead {
+    margin: 0 auto;
+  }
+
+  .motto-card {
+    margin-right: 2rem;
+    margin-top: 5rem;
+  }
+}
