--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -60,6 +60,10 @@ h1 {
   margin-right: 1rem;
 }
 
+.small-screen-nav-menu {
+  display: none;
+}
+
 .card-container {
   display: flex;
   justify-content: flex-end;
@@ -139,12 +143,19 @@ h1 {
   padding: 4rem 0 4rem 4rem;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) and (min-width:470px){
   h1 {
     font-size: 1.33rem;
     padding: 1.5rem 5rem;
   }
 
+  .motto-card {
+    margin-right: 2rem;
+    margin-top: 5rem;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
   .site-container {
     width: 100%;
   }
@@ -156,9 +167,72 @@ h1 {
   .overhead {
     margin: 0 auto;
   }
+}
+
+
+@media only screen and (max-width: 470px) {
+  h1 {
+    font-size: 1rem;
+    padding: 1rem 0 1rem 0;
+  }
+
+  .banner {
+    height: 17rem;
+    background-position: 20%;
+  }
+
+  .company-name {
+    display: none;
+  }
+
+  .large-screen-nav-menu {
+    display: none;
+  }
+
+  .small-screen-nav-menu {
+    display: inline;
+  }
+
+  .card-container {
+    display: inline;
+  }
 
   .motto-card {
-    margin-right: 2rem;
-    margin-top: 5rem;
+    margin: 9rem auto 0 auto;
+    text-align: center;
+  }
+
+  .selling-point-grid {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    margin: 3.77rem auto;
+  }
+
+  .selling-point p {
+    font-size: 0.77rem;
+    margin-bottom: 1.54rem;
+  }
+
+  .quick-hits-grid {
+    flex-direction: column;
+  }
+
+  .quick-hit {
+    width: 100%;
+    margin-bottom: 4rem;
+  }
+
+  .quick-hit-title {
+    width: 100%;
+  }
+
+  .quick-hit-info {
+    margin: 1rem;
+    font-size: 0.77rem;
+  }
+
+  .footer-items {
+    justify-content: center;
   }
 }
